support for java 6

--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-        <parent>
-          <groupId>org.sonatype.oss</groupId>
-          <artifactId>oss-parent</artifactId>
-          <version>7</version>
-        </parent>
+    <parent>
+      <groupId>org.sonatype.oss</groupId>
+      <artifactId>oss-parent</artifactId>
+      <version>7</version>
+    </parent>
 	<groupId>com.sparkjava</groupId>
 	<artifactId>spark-core</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.2</version>
 	<name>Spark</name>
         <description>A Sinatra inspired java web framework</description>
-	<url>http://www.sparkjava.com</url>
+		<url>http://www.sparkjava.com</url>
         <licenses>
           <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -29,7 +29,11 @@
         </developers>
 
 	<properties>
+		<!--  
 		<jetty.version>9.0.2.v20130417</jetty.version>
+		<jetty.version>8.1.14.v20131031</jetty.version>
+		-->
+		<jetty.version>8.1.14.v20131031</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -38,13 +42,14 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
+			<version>1.5.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.2</version>
+			<version>1.5.0</version>
             <scope>provided</scope>
 		</dependency>
 
@@ -86,6 +91,13 @@
     		<version>2.2.4</version>
     		<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		      <groupId>com.sparkjava</groupId>
+		      <artifactId>spark-template-velocity</artifactId>
+		      <version>1.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -113,8 +125,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 					<optimize>true</optimize>
 					<debug>true</debug>
 				</configuration>
